syntax = "proto3";

option csharp_namespace = "GrpcServer.Protos";

package user;

// The user service definition
service User {
  // Gets a user by ID
  rpc GetUserById (UserIdRequest) returns (UserReply);
  rpc GetAuthenticate (UserNameRequest) returns (UserNameReply);
}

message UserIdRequest {
  int32 id = 1;
}

message UserReply {
  int32 id = 1;
  string name = 2;
}


message UserNameRequest{
	string username = 1;
	string password = 2;
}

message UserNameReply{
	bool state = 1;
	bool admin = 2;
}